cant find a way to create a md file

--- a/Peer_Assessement.html
+++ b/Peer_Assessement.html
@@ -126,9 +126,10 @@ $(document).ready(function () {
 </div>
 </div>
 <div id="to-see-the-plots-please-be-sure-to-read-this-in-the-correct-html-editor" class="section level1">
-<h1>to see the plots, please be sure to read this in the correct html editor!</h1>
+<h1>to see the plots, please be sure to read this in the correct html editor !</h1>
 <p>First bit of code changes the options so that the code will always be available in the markdown document.</p>
-<pre class="r"><code>library(knitr)</code></pre>
+<pre class="r"><code>library(markdown)
+library(knitr)</code></pre>
 <pre><code>## Warning: package 'knitr' was built under R version 3.3.2</code></pre>
 <pre class="r"><code>opts_chunk$set(echo = TRUE)</code></pre>
 <div id="code-for-reading-in-the-dataset-andor-processing-the-data" class="section level3">
